--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -32,22 +32,22 @@ jobs:
         with:
           category: "/language:python"
 
-      # Pdf reports always empty for PRs
+      # pdf reports always empty for pull_request
       - name: Generate Security Report
-        # if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         uses: rsdmike/github-security-report-action@a149b24539044c92786ec39af8ba38c93496495d # v3.0.4
         with:
           template: report
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Rename Report
         shell: bash
-        continue-on-error: true
+        if: ${{ github.event_name != 'pull_request' }}
         run: |
           DATE=$(date +"%Y-%m-%d")
           REF_NAME="${{ github.ref_name }}"
           mv "report.pdf" "codeql_nncf_report_${DATE}_${REF_NAME//\//-}_${{ github.sha }}.pdf"
       - name: Upload CodeQL Artifacts
-        # if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ github.event_name != 'pull_request' }}
         uses: actions/upload-artifact@1746f4ab65b179e0ea60a494b83293b640dd5bba # v4.3.2
         with:
           name: codeql-scan-results
