--- a/.github/workflows/api_changes_check.yml
+++ b/.github/workflows/api_changes_check.yml
@@ -26,9 +26,13 @@ jobs:
       issues: write
     steps:
       - name: Download built HTML doc as artifact from previous step
-        uses: alehechka/download-tartifact@1195216b256562056097b175df17b167557f8681 # v2
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: html_doc_artifact
+      - run: |
+          tar -xvf artifact.tar
+          rm artifact.tar
+        shell: 'bash'
       - name: Checkout latest doc_pages branch tip
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
