--- a/.github/workflows/build_and_publish_doc.yml
+++ b/.github/workflows/build_and_publish_doc.yml
@@ -26,15 +26,29 @@ jobs:
     steps:
       - name: Checkout main repo  # the github-pages-deploy-action seems to require this step
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+
       - name: Download HTML doc build artifact
-        uses: alehechka/download-tartifact@1195216b256562056097b175df17b167557f8681 # v2
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: html_doc_artifact
+      - name: Extract artifact
+        shell: 'bash'
+        run: |
+          tar -xvf artifact.tar
+          rm artifact.tar
+
       - name: Download schema doc build artifact
-        uses: alehechka/download-tartifact@1195216b256562056097b175df17b167557f8681 # v2
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: schema_doc_artifact
           path: html_build/html
+      - name: Extract artifact
+        shell: 'bash'
+        working-directory: html_build/html
+        run: |
+          tar -xvf artifact.tar
+          rm artifact.tar
+
       - name: Publish built docs on Github Pages branch ${{ env.GH_PAGES_BRANCH }}
         uses: JamesIves/github-pages-deploy-action@5c6e9e9f3672ce8fd37b9856193d2a537941e66c # v4.6.1
         with:
