--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,14 +96,19 @@ files = [
     "nncf/api",
     "nncf/data",
     "nncf/common/collector.py",
+    # "nncf/common/composite_compression.py",
+    # "nncf/common/compression.py",
+    # "nncf/common/deprecation.py",
     "nncf/common/engine.py",
+    "nncf/common/exporter.py",
+    # "nncf/common/factory.py",
     "nncf/common/hook_handle.py",
     "nncf/common/insertion_point_graph.py",
-    "nncf/common/logging/logger.py",
     "nncf/common/plotting.py",
     "nncf/common/schedulers.py",
     "nncf/common/scopes.py",
     "nncf/common/stateful_classes_registry.py",
+    "nncf/common/statistics.py",
     "nncf/common/strip.py",
     "nncf/common/tensor.py",
     "nncf/common/accuracy_aware_training",
