--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,7 @@ files = [
     # "nncf/common/deprecation.py",
     "nncf/common/engine.py",
     "nncf/common/exporter.py",
-    # "nncf/common/factory.py",
+    "nncf/common/factory.py",
     "nncf/common/hook_handle.py",
     "nncf/common/insertion_point_graph.py",
     "nncf/common/plotting.py",
@@ -114,6 +114,7 @@ files = [
     "nncf/common/accuracy_aware_training",
     "nncf/common/graph",
     "nncf/common/initialization",
+    "nncf/common/logging/logger.py",
     "nncf/common/sparsity",
     "nncf/common/tensor_statistics",
     "nncf/common/utils",
