--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -48,4 +48,5 @@ jobs:
         run:  pytest tests/tensorflow -m 'nightly'
 
   weight-compression:
+    if: github.repository_owner == 'openvinotoolkit'
     uses: ./.github/workflows/conformance_weight_compression.yml
