--- a/.github/workflows/call_precommit.yml
+++ b/.github/workflows/call_precommit.yml
@@ -39,7 +39,7 @@ jobs:
         run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
         shell: bash
       - name: Install NNCF and test requirements
-        run: make install-common-test
+        run: 	pip install . -r tests/common/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run common precommit test scope
