--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - python_version: "3.9"
-            override_requirements: "numpy==1.24.0"
+            override_requirements: "numpy==1.24.0,torch==2.4.0"
           - python_version: "3.11"
           - python_version: "3.12"
     uses: ./.github/workflows/call_precommit.yml
@@ -23,6 +23,6 @@ jobs:
       override_requirements: ${{ matrix.override_requirements || '' }}
       gpu_enabled: false
 
-  # macos:
-  #   if: github.repository_owner == 'openvinotoolkit'
-  #   uses: ./.github/workflows/macos.yml
+  macos:
+    if: github.repository_owner == 'openvinotoolkit'
+    uses: ./.github/workflows/macos.yml
