--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -14,7 +14,11 @@ jobs:
       matrix:
         include:
           - python_version: "3.9"
-            override_requirements: "numpy==1.24.0,torch==2.4.0,torchvision==0.19"
+            override_requirements: "numpy==1.24.0"
+          - python_version: "3.9"
+            override_requirements: "numpy==1.23.0"
+          - python_version: "3.9"
+            override_requirements: "numpy==1.23.4"
           - python_version: "3.11"
           - python_version: "3.12"
     uses: ./.github/workflows/call_precommit.yml
