--- a/.github/workflows/call_precommit.yml
+++ b/.github/workflows/call_precommit.yml
@@ -13,6 +13,11 @@ on:
         type: boolean
         default: false
         required: true
+      override_requirements:
+        description: 'Override requirements'
+        default: ''
+        type: string
+        required: false
 
 jobs:
   common:
@@ -29,8 +34,12 @@ jobs:
         with:
           python-version: ${{ inputs.python_version }}
           cache: pip
+      - name: Override constraints
+        if: ${{ inputs.override_requirements != '' }}
+        run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
+        shell: bash
       - name: Install NNCF and test requirements
-        run: make install-common-test
+        run: pip install . -r tests/common/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run common precommit test scope
@@ -51,8 +60,12 @@ jobs:
       - uses: actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c # v5.0.0
         with:
           python-version: ${{ inputs.python_version }}
+      - name: Override constraints
+        if: ${{ inputs.override_requirements != '' }}
+        run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
+        shell: bash
       - name: Install NNCF and test requirements
-        run: make install-onnx-test
+        run: pip install . -r tests/onnx/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run ONNX precommit test scope
@@ -74,8 +87,12 @@ jobs:
         with:
           python-version: ${{ inputs.python_version }}
           cache: pip
+      - name: Override constraints
+        if: ${{ inputs.override_requirements != '' }}
+        run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
+        shell: bash
       - name: Install NNCF and test requirements
-        run: make install-openvino-test
+        run: pip install . -r tests/openvino/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run OV precommit test scope
@@ -108,8 +125,12 @@ jobs:
         run: |
           cat /etc/*release
           cat /proc/cpuinfo
+      - name: Override constraints
+        if: ${{ inputs.override_requirements != '' }}
+        run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
+        shell: bash
       - name: Install NNCF and test requirements
-        run: make install-torch-test
+        run: pip install . -r tests/torch/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run PyTorch precommit test scope
@@ -151,8 +172,12 @@ jobs:
         with:
           python-version: ${{ inputs.python_version }}
           cache: pip
+      - name: Override constraints
+        if: ${{ inputs.override_requirements != '' }}
+        run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
+        shell: bash
       - name: Install NNCF and test requirements
-        run: make install-torch-test
+        run: pip install . -r tests/torch/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Check CUDA
@@ -181,8 +206,12 @@ jobs:
         with:
           python-version: ${{ inputs.python_version }}
           cache: pip
+      - name: Override constraints
+        if: ${{ inputs.override_requirements != '' }}
+        run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
+        shell: bash
       - name: Install NNCF and test requirements
-        run: make install-tensorflow-test
+        run: pip install . -r tests/tensorflow/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run TensorFlow precommit test scope
@@ -204,7 +233,7 @@ jobs:
         with:
           python-version: ${{ inputs.python_version }}
           cache: pip
-      - name: Install NNCF and test requirements
+      - name: Install test requirements
         run: pip install -r tests/tools/requirements.txt
       - name: Print installed modules
         run: pip list
@@ -225,9 +254,13 @@ jobs:
         with:
           python-version: ${{ inputs.python_version }}
           cache: pip
+      - name: Override constraints
+        if: ${{ inputs.override_requirements != '' }}
+        run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
+        shell: bash
       - name: Install NNCF and test requirements
         run: |
-          pip install -r tests/torch2/requirements.txt -e .
+          pip install . -r tests/torch2/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run torch2 precommit test scope
