--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -12,10 +12,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ["3.9", "3.11", "3.12"]
+        include:
+          - python_version: "3.9"
+            override_requirements: "numpy==1.24.0"
+          - python_version: "3.11"
+          - python_version: "3.12"
     uses: ./.github/workflows/call_precommit.yml
     with:
       python_version: ${{ matrix.python_version }}
+      override_requirements: ${{ matrix.override_requirements || '' }}
       gpu_enabled: false
 
   macos:
