--- a/.github/workflows/call_precommit_windows.yml
+++ b/.github/workflows/call_precommit_windows.yml
@@ -123,7 +123,7 @@ jobs:
           export LIB="${LIB};$(python -c "import sysconfig; print(sysconfig.get_config_var('LIBDIR'))")"
           export LIB="${LIB};$(python -c "import sys; print(sys.prefix + '/libs')")"
           export INCLUDE="${INCLUDE};$(python -c "import sysconfig; print(sysconfig.get_path('include'))")"
-          pytest tests\torch\quantization\test_functions.py -s
+          pytest tests\\torch\\quantization\\test_functions.py -s
         env:
           NUM_WORKERS: 4
 
