--- a/.github/workflows/call_precommit_windows.yml
+++ b/.github/workflows/call_precommit_windows.yml
@@ -94,7 +94,7 @@ jobs:
           NUM_WORKERS: 4
 
   pytorch-cpu:
-    timeout-minutes: 40
+    timeout-minutes: 100
     runs-on: windows-2019-8-core
     defaults:
       run:
@@ -125,7 +125,7 @@ jobs:
           export INCLUDE="${INCLUDE};$(python -c "import sysconfig; print(sysconfig.get_path('include'))")"
           make test-torch-cpu
         env:
-          NUM_WORKERS: 1
+          NUM_WORKERS: 1  # Parallel tests are falls on build extenstion.
 
   tensorflow:
     timeout-minutes: 40
