--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -49,3 +49,9 @@ jobs:
   weight-compression:
     if: github.repository_owner == 'openvinotoolkit'
     uses: ./.github/workflows/conformance_weight_compression.yml
+
+  precommit-windows:
+    if: github.repository_owner == 'openvinotoolkit'
+    uses: ./.github/workflows/call_precommit_windows.yml
+    with:
+      python_version: "3.10"
