Fix fail on macos  (#3215)
### Changes

- Skip `test_non_convertable_division` on MacOS
- Cut values to 1e-10, more digits after zero dont change a result
- Use onle line `pip install` in gha 

### Reason for changes


https://github.com/openvinotoolkit/nncf/actions/runs/12969549430/job/36208496733

```
FAILED tests/openvino/native/test_node_utils.py::test_non_convertable_division[0.058599039912223816-15-True-0.003906603] - AssertionError: 
Not equal to tolerance rtol=0, atol=0

Mismatched elements: 1 / 1 (100%)
Max absolute difference among violations: 3.5297126e-07
Max relative difference among violations: 9.035248e-05
 ACTUAL: array([0.003906], dtype=float32)
 DESIRED: array([0.003907], dtype=float32)
FAILED tests/openvino/native/test_node_utils.py::test_non_convertable_division[0.058599039912223816-15-False-0.003906602505594492] - AssertionError: 
Not equal to tolerance rtol=0, atol=0

Mismatched elements: 1 / 1 (100%)
Max absolute difference among violations: 3.525056e-07
Max relative difference among violations: 9.023329e-05
 ACTUAL: array([0.003906], dtype=float32)
 DESIRED: array([0.003907], dtype=float32)
```

### Tests


https://github.com/openvinotoolkit/nncf/actions/runs/12991342528/job/36228616650

---------

Co-authored-by: Nikita Savelyev <nikita.savelyev@intel.com>

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -28,8 +28,7 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          pip install .
-          pip install -r tests/common/requirements.txt
+          pip install . -r tests/common/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run pre-commit
@@ -53,8 +52,7 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          pip install .
-          pip install -r tests/openvino/requirements.txt
+          pip install . -r tests/openvino/requirements.txt
       - name: Print installed modules
         run: pip list
       - name: Run pre-commit
