--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,12 +124,18 @@ ignore = [
     "SIM117", # multiple-with-statements
     "SIM103", # needless-bool
     "NPY002", # numpy-legacy-random
+    "UP006", # non-pep585-annotation
+    "UP007", # non-pep604-annotation-union
+    "UP035", # deprecated-import
+    "UP038", # non-pep604-isinstance
+    "UP045", # non-pep604-annotation-optional
 ]
 select = [
     "E", # pycodestyle rules
     "F", # pyflakes rules
     "CPY001", # copyright check
     "NPY", # numpy rules
+    "UP", # pyupgrade
 ]
 extend-select = [
     "SIM", # https://pypi.org/project/flake8-simplify
