--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,10 @@ files = [
 
 [tool.ruff]
 line-length = 120
-exclude = ["nncf/tensorflow/__init__.py"]
+exclude = [
+    "nncf/tensorflow/__init__.py",
+    "nncf/experimental/torch2/function_hook/handle_inner_functions.py"
+]
 
 [tool.ruff.lint]
 preview = true
