add tinyllama_data_aware_awq_scale_estimation for TORCH

--- a/tests/post_training/data/wc_reference_data.yaml
+++ b/tests/post_training/data/wc_reference_data.yaml
@@ -18,6 +18,10 @@ tinyllama_data_aware_awq_scale_estimation_backend_OV:
   metric_value: 0.85502
   num_int4: 94
   num_int8: 124
+tinyllama_data_aware_awq_scale_estimation_backend_TORCH:
+  metric_value: 0.85502
+  num_int4: 94
+  num_int8: 124
 tinyllama_data_aware_awq_scale_estimation_stateful_backend_OV:
   metric_value: 0.85502
   num_int4: 94
