--- a/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
@@ -1,5 +1,5 @@
 datasets
-whowhatbench @ git+https://github.com/andreyanufr/who_what_benchmark.git
+whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai.git#subdirectory=llm_bench/python/who_what_benchmark
 numpy>=1.23.5
 openvino==2024.6
 optimum-intel[openvino]>=1.13.0
