--- a/tests/post_training/requirements.txt
+++ b/tests/post_training/requirements.txt
@@ -18,5 +18,5 @@ tensorboard==2.13.0
 tensorflow-io==0.32.0
 timm==0.9.2
 transformers==4.38.2
-whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai.git#subdirectory=llm_bench/python/who_what_benchmark
+git+https://github.com/openvinotoolkit/openvino.genai#subdirectory=tools/who_what_benchmark
 datasets==2.21.0
