--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,6 +138,7 @@ select = [
     "F", # pyflakes rules
     "CPY001", # copyright check
     "NPY", # numpy rules
+    "INP", # flake8-no-pep420
 ]
 extend-select = [
     "SIM", # https://pypi.org/project/flake8-simplify
@@ -149,6 +150,7 @@ extend-select = [
 "tests/**/*.py" = ["F403"]
 "tests/**/__init__.py" = ["F401"]
 "examples/**/*.py" = ["F403"]
+"!nncf/**.py" = ["INP"]
 
 [tool.ruff.lint.flake8-copyright]
 notice-rgx = """\
