--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,6 +142,7 @@ select = [
     "UP", # pyupgrade
     "EM",  # flake8-errmsg
     "INP", # flake8-no-pep420
+    "ISC", # flake8-implicit-str-concat
 ]
 extend-select = [
     "SIM", # https://pypi.org/project/flake8-simplify
