--- a/examples/llm_compression/openvino/tiny_llama_synthetic_data/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama_synthetic_data/requirements.txt
@@ -1,8 +1,7 @@
 torch==2.5.1
 datasets==3.0.1
-numpy>=1.23.5
+numpy>=1.23.5,<2
 openvino==2025.0
-optimum-intel[openvino]>=1.13.0
+optimum-intel>=1.13.0
 transformers>=4.35.2
 onnx==1.17.0
-numpy<2
