--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,12 @@ default_language_version:
   python: python3
 
 repos:
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.9.6
+    hooks:
+      - id: ruff
+        args: [--fix, --show-fixes]
+
   - repo: https://github.com/psf/black
     rev: 24.10.0
     hooks:
@@ -13,12 +19,6 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
-
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.9.2
-    hooks:
-      - id: ruff
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.43.0
