--- a/tests/post_training/data/wc_reference_data_2025.0.yaml
+++ b/tests/post_training/data/wc_reference_data_2025.0.yaml
@@ -19,7 +19,8 @@ tinyllama_scale_estimation_group_size_64_backend_TORCH:
   num_int8: 124
   num_compressed_xfail_reason: "Issue-160006"
 tinyllama_scale_estimation_per_channel_backend_TORCH:
-  metric_value: 0.80873
+  metric_value: 0.81389
   num_int4: 188
   num_int8: 124
+  atol: 0.006 # difference across devices: 0.80873 vs 0.81389
   num_compressed_xfail_reason: "Issue-160006"
