--- a/.github/workflows/api_changes_check.yml
+++ b/.github/workflows/api_changes_check.yml
@@ -21,7 +21,7 @@ jobs:
   compare-api-doc-with-develop:
     timeout-minutes: 30
     needs: call-build-api-doc
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       issues: write
     steps:
