--- a/.github/workflows/build_html_doc.yml
+++ b/.github/workflows/build_html_doc.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build-html:
     timeout-minutes: 10
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
