--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         backend:  ["torch", "tf", "onnx", "openvino"]
-        runner: ["windows-latest", "ubuntu-22.04"]
+        runner: ["windows-latest", "ubuntu-latest"]
     defaults:
       run:
         shell: bash
