--- a/.github/workflows/model_hub.yml
+++ b/.github/workflows/model_hub.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   torch:
-    runs-on: ubuntu-20.04-16-cores
+    runs-on: ubuntu-latest-16-cores
     defaults:
       run:
         shell: bash
