--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,25 @@ ignore = [
     "UP035", # deprecated-import
     "UP038", # non-pep604-isinstance
     "UP045", # non-pep604-annotation-optional
+    "D100", # undocumented-public-module
+    "D101", # undocumented-public-class
+    "D102", # undocumented-public-method
+    "D103", # undocumented-public-function
+    "D104", # undocumented-public-package
+    "D105", # undocumented-magic-method
+    "D106", # undocumented-public-nested-class
+    "D107", # undocumented-public-init
+    "D200", # unnecessary-multiline-docstring
+    "D203", # incorrect-blank-line-before-class
+    "D205", # missing-blank-line-after-summary
+    "D212", # multi-line-summary-first-line
+    "D400", # missing-trailing-period
+    "D401", # non-imperative-mood
+    "D402", # signature-in-docstring
+    "D404", # docstring-starts-with-this
+    "D413", # missing-blank-line-after-last-section
+    "D415", # missing-terminal-punctuation
+    "D417", # undocumented-param
 ]
 select = [
     "E", # pycodestyle rules
@@ -142,6 +161,7 @@ select = [
     "EM",  # flake8-errmsg
     "INP", # flake8-no-pep420
     "ISC", # flake8-implicit-str-concat
+    "D", # pydocstyle
 ]
 extend-select = [
     "SIM", # https://pypi.org/project/flake8-simplify
@@ -153,7 +173,7 @@ extend-select = [
 "tests/**/*.py" = ["F403"]
 "tests/**/__init__.py" = ["F401"]
 "examples/**/*.py" = ["F403"]
-"!nncf/**.py" = ["INP"]
+"!nncf/**.py" = ["INP", "D"]
 
 [tool.ruff.lint.flake8-copyright]
 notice-rgx = """\
