--- a/tests/post_training/data/ptq_reference_data.yaml
+++ b/tests/post_training/data/ptq_reference_data.yaml
@@ -42,6 +42,7 @@ torchvision/resnet18_backend_FX_TORCH:
   xfail_reason: "Issue-CVS-162009"
 torchvision/resnet18_backend_CUDA_FX_TORCH:
   metric_value: 0.6946
+  xfail_reason: "Issue-CVS-162009"
 torchvision/mobilenet_v3_small_BC_backend_FP32:
   metric_value: 0.6766
 torchvision/mobilenet_v3_small_BC_backend_OV:
@@ -53,6 +54,7 @@ torchvision/mobilenet_v3_small_BC_backend_FX_TORCH:
   xfail_reason: "Issue-CVS-162009"
 torchvision/mobilenet_v3_small_BC_backend_CUDA_FX_TORCH:
   metric_value: 0.6664
+  xfail_reason: "Issue-CVS-162009"
 torchvision/vit_b_16_backend_FP32:
   metric_value: 0.8107
 torchvision/vit_b_16_backend_OV:
@@ -62,6 +64,7 @@ torchvision/vit_b_16_backend_FX_TORCH:
   xfail_reason: "Issue-CVS-162009"
 torchvision/vit_b_16_backend_CUDA_FX_TORCH:
   metric_value: 0.80922
+  xfail_reason: "Issue-CVS-162009"
 torchvision/swin_v2_s_backend_FP32:
   metric_value: 0.83712
 torchvision/swin_v2_s_backend_OV:
@@ -71,6 +74,7 @@ torchvision/swin_v2_s_backend_FX_TORCH:
   xfail_reason: "Issue-CVS-162009"
 torchvision/swin_v2_s_backend_CUDA_FX_TORCH:
   metric_value: 0.8360
+  xfail_reason: "Issue-CVS-162009"
 timm/crossvit_9_240_backend_CUDA_TORCH:
   metric_value: 0.7275
 timm/crossvit_9_240_backend_FP32:
