--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,9 @@ dependencies = [
     "jsonschema>=3.2.0",
     "jstyleson>=0.0.2",
     "natsort>=7.1.0",
-    "networkx>=2.6, <=3.3",
+    "networkx>=2.6, <3.5.0",
     "ninja>=1.10.0.post2, <1.12",
-    "numpy>=1.24.0, <2.2.0",
+    "numpy>=1.24.0, <2.3.0",
     "openvino-telemetry>=2023.2.0",
     "packaging>=20.0",
     "pandas>=1.1.5,<2.3",
