--- a/tests/post_training/requirements.txt
+++ b/tests/post_training/requirements.txt
@@ -18,5 +18,6 @@ tensorboard==2.13.0
 tensorflow-io==0.32.0
 timm==0.9.2
 transformers==4.47.0
+accelerate==1.1.0
 whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai.git@2025.0.0.0#subdirectory=tools/who_what_benchmark
 datasets==3.1.0
