--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ dependencies = [
 [project.optional-dependencies]
 plots = [
     "kaleido>=0.2.1",
-    "matplotlib>=3.3.4, <3.6",
+    "matplotlib>=3.3.4",
     "pillow>=9.0.0",
     "plotly-express>=0.4.1",
 ]
