--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
     "pandas>=1.1.5,<2.3",
     "psutil",
     "py-cpuinfo>=9.0.0",
-    "pydot>=1.4.1, <3.0.0",
+    "pydot>=1.4.1, <=3.0.4",
     "pymoo>=0.6.0.1",
     "rich>=13.5.2",
     "safetensors>=0.4.1",
