xfail error message fix

--- a/tests/post_training/data/ptq_reference_data.yaml
+++ b/tests/post_training/data/ptq_reference_data.yaml
@@ -44,13 +44,13 @@ torchvision/resnet18_backend_FX_TORCH:
   metric_value: 0.6946
   exception_xfail_reason:
     type: "OpConversionFailure"
-    error_message: "Check 'is_conversion_successful' failed at src/frontends/pytorch/src/frontend.cpp:171:\nFrontEnd API failed with OpConversionFailure:\nModel wasn't fully converted. Failed operations detailed log:\n-- torch::None with a message:\nNone constant cannot be converted to OpenVINO opset and should be removed by consuming operation.\nSummary:\n-- No conversion rule found for operations: aten.adaptive_avg_pool2d.default, aten.conv2d.default, aten.linear.default\n-- Conversion is failed for: torch::None\n"
+    error_message: "Check 'is_conversion_successful' failed at src/frontends/pytorch/src/frontend.cpp:171:\nFrontEnd API failed with OpConversionFailure:\nModel wasn't fully converted. Failed operations detailed log:\n-- torch::None with a message:\nNone constant cannot be converted to OpenVINO opset and should be removed by consuming operation.\nSummary:\n-- No conversion rule found for operations: aten.adaptive_avg_pool2d.default, aten.conv2d.default, aten.linear.default, aten.max_pool2d.default\n-- Conversion is failed for: torch::None\n"
     message: "Issue-162009"
 torchvision/resnet18_backend_CUDA_FX_TORCH:
   metric_value: 0.6946
   exception_xfail_reason:
     type: "OpConversionFailure"
-    error_message: "Check 'is_conversion_successful' failed at src/frontends/pytorch/src/frontend.cpp:171:\nFrontEnd API failed with OpConversionFailure:\nModel wasn't fully converted. Failed operations detailed log:\n-- torch::None with a message:\nNone constant cannot be converted to OpenVINO opset and should be removed by consuming operation.\nSummary:\n-- No conversion rule found for operations: aten.adaptive_avg_pool2d.default, aten.conv2d.default, aten.linear.default\n-- Conversion is failed for: torch::None\n"
+    error_message: "Check 'is_conversion_successful' failed at src/frontends/pytorch/src/frontend.cpp:171:\nFrontEnd API failed with OpConversionFailure:\nModel wasn't fully converted. Failed operations detailed log:\n-- torch::None with a message:\nNone constant cannot be converted to OpenVINO opset and should be removed by consuming operation.\nSummary:\n-- No conversion rule found for operations: aten.adaptive_avg_pool2d.default, aten.conv2d.default, aten.linear.default, aten.max_pool2d.default\n-- Conversion is failed for: torch::None\n"
     message: "Issue-162009"
 torchvision/mobilenet_v3_small_BC_backend_FP32:
   metric_value: 0.6766
