--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,12 +7,8 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --show-fixes]
-
-  - repo: https://github.com/psf/black
-    rev: 24.10.0
-    hooks:
-      - id: black
-        files: '^.*\.py'
+      - id: ruff-format
+        types_or: [ python, pyi ]
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
     rev: v0.43.0
