--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -16,38 +16,8 @@ on:
       - 'tests/cross_fw/examples/*'  # examples tests runs in separate workflow
 
 jobs:
-  # pytest:
-  #   uses: ./.github/workflows/call_precommit.yml
-  #   with:
-  #     python_version: "3.10.14"
-  #     gpu_enabled: true
-  pytorch-cpu:
-    timeout-minutes: 100
-    runs-on: windows-2019-8-core
-    defaults:
-      run:
-        shell: bash
-    env:
-      DEBIAN_FRONTEND: noninteractive
-    steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          lfs: true
-      - uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
-        with:
-          python-version: "3.10"
-      - uses: ilammy/msvc-dev-cmd@0b201ec74fa43914dc39ae48a89fd1d8cb592756 # v1.13.0
-
-      - name: Install NNCF and test requirements
-        run: pip install . -r tests/torch/requirements.txt
-      - name: Print installed modules
-        run: pip list
-      - name: Run PyTorch precommit test scope
-        run: |
-          set +e
-          export LIB="${LIB};$(python -c "import sysconfig; print(sysconfig.get_config_var('LIBDIR'))")"
-          export LIB="${LIB};$(python -c "import sys; print(sys.prefix + '/libs')")"
-          export INCLUDE="${INCLUDE};$(python -c "import sysconfig; print(sysconfig.get_path('include'))")"
-          pytest tests/torch/sparsity/movement/test_model_saving.py -ra -m "not cuda and not weekly and not nightly and not models_hub"
-        env:
-          NUM_WORKERS: 1  # Parallel tests are falls on build extenstion.
+  pytest:
+    uses: ./.github/workflows/call_precommit.yml
+    with:
+      python_version: "3.10.14"
+      gpu_enabled: true
