--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -55,3 +55,7 @@ jobs:
     uses: ./.github/workflows/call_precommit_windows.yml
     with:
       python_version: "3.10"
+
+  sdl-nightly:
+    if: github.repository_owner == 'openvinotoolkit'
+    uses: ./.github/workflows/sdl_nightly.yml
