--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,7 @@ ENV/
 # snapshots
 *.tar
 
-# pylint config is left at dev's discretion, CI uses ruff/isort/black instead
+# pylint config is left at dev's discretion, CI uses ruff instead
 .pylintrc
 
 # VSCode
