--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,4 +27,4 @@ repos:
           - --no-summary
           - --gitignore
           - --files
-        files: (^nncf/torch/.*\.py$|.*\.md$)
+        files: (^nncf/.*\.py$|.*\.md$)
