Rework tensor dispatcher (#3306)
### Changes

Introduce tensor_dispatcher instead of functools.singledispatch

- Simplified adding a new function
- Dispatch mechanism based on signature 
- Check names of arguments and annotation 
- Enable mypy for `nncf/tensor`
- Keep signature of function

![image](https://github.com/user-attachments/assets/bc53a27e-49ab-4cd6-816b-07e12e431f60)

### Reason for changes

No signature of functions

![image](https://github.com/user-attachments/assets/7bbb4ec0-4323-49b0-bd2b-dd3ea8fe149b)
Impossible use mypy without cast.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,8 +93,15 @@ files = [
     "nncf/quantization/range_estimator.py",
     "nncf/quantization/telemetry_extractors.py",
     "nncf/telemetry/",
+    "nncf/tensor/",
     "nncf/*py",
 ]
+disable_error_code = ["import-untyped"]
+
+[[tool.mypy.overrides]]
+module = "nncf.tensor.functions.*"
+disable_error_code = ["empty-body", "no-any-return"]
+
 
 [tool.ruff]
 line-length = 120
