--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,5 +14,17 @@ repos:
     rev: v0.43.0
     hooks:
       - id: markdownlint
-        args: [--config=.markdownlint.yaml]
+        args: [--config=.ci/markdownlint.yaml]
 
+  - repo: https://github.com/streetsidesoftware/cspell-cli
+    rev: v8.17.3
+    hooks:
+      - id: cspell
+        args:
+          - --config=.ci/cspell.json
+          - --no-must-find-files
+          - --no-progress
+          - --no-summary
+          - --gitignore
+          - --files
+        files: (^nncf/.*\.py$|.*\.md$)
