--- a/tests/torch/requirements.txt
+++ b/tests/torch/requirements.txt
@@ -24,3 +24,7 @@ timm==0.9.2
 # Required for torch/fx tests
 torchvision
 fastdownload==0.0.7
+
+sentence-transformers>=2.2.2
+optimum-intel==1.22.0
+optimum==1.24.0
