--- a/examples/llm_compression/torch/qat_with_lora/requirements.txt
+++ b/examples/llm_compression/torch/qat_with_lora/requirements.txt
@@ -1,6 +1,7 @@
 tqdm
+tensorboard
 whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai#subdirectory=tools/who_what_benchmark
 numpy>=1.23.5,<2
-openvino==2025.0
+# openvino==2025.1
 optimum-intel>=1.22.0
 transformers>=4.48.0
