--- a/tests/post_training/requirements.txt
+++ b/tests/post_training/requirements.txt
@@ -1,4 +1,8 @@
 -c ../../constraints.txt
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release
+--pre
+openvino-genai
+openvino
 torch
 torchvision
 onnx
