--- a/.github/workflows/call_precommit.yml
+++ b/.github/workflows/call_precommit.yml
@@ -90,7 +90,9 @@ jobs:
         run: python .github/scripts/override_constraints.py "${{ inputs.override_requirements }}"
         shell: bash
       - name: Install NNCF and test requirements
-        run: pip install . -r tests/openvino/requirements.txt --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release
+        run: pip install . -r tests/openvino/requirements.txt
+      - name: Install OV RC
+        run: pip install -U --pre openvino --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/nightly
       - name: Print installed modules
         run: pip list
       - name: Run OV precommit test scope
