--- a/examples/llm_compression/openvino/tiny_llama/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama/requirements.txt
@@ -1,5 +1,6 @@
 transformers>=4.48.0
 datasets==2.14.7
-openvino==2025.0
+openvino==2025.1
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
 optimum-intel[openvino]>=1.22.0
 onnx==1.17.0
