--- a/examples/llm_compression/torch/qat_with_lora/requirements.txt
+++ b/examples/llm_compression/torch/qat_with_lora/requirements.txt
@@ -1,7 +1,9 @@
 tqdm
 tensorboard
-whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai#subdirectory=tools/who_what_benchmark
+whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@releases/2025/1#subdirectory=tools/who_what_benchmark
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
 numpy>=1.23.5,<2
-openvino==2025.0
+openvino==2025.1
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
 optimum-intel>=1.22.0
 transformers>=4.48.0
