--- a/examples/quantization_aware_training/torch/resnet18/requirements.txt
+++ b/examples/quantization_aware_training/torch/resnet18/requirements.txt
@@ -1,5 +1,6 @@
 fastdownload==0.0.7
-openvino==2025.0
+openvino==2025.1
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
 torch==2.6.0
 torchvision==0.21.0
 setuptools<=72.1.0
