--- a/examples/llm_compression/openvino/tiny_llama/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama/requirements.txt
@@ -1,6 +1,6 @@
 transformers>=4.48.0
 datasets==2.14.7
-openvino==2025.1
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+openvino==2025.1.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
 optimum-intel[openvino]>=1.22.0
 onnx==1.17.0
