--- a/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
+++ b/examples/llm_compression/openvino/tiny_llama_find_hyperparams/requirements.txt
@@ -1,9 +1,9 @@
 datasets
 whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@releases/2025/1#subdirectory=tools/who_what_benchmark
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/ --pre
 numpy>=1.23.5,<2
-openvino==2025.1
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+openvino==2025.1.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
 optimum-intel>=1.22.0
 transformers>=4.48.0
 onnx==1.17.0
