--- a/examples/post_training_quantization/openvino/mobilenet_v2/requirements.txt
+++ b/examples/post_training_quantization/openvino/mobilenet_v2/requirements.txt
@@ -2,5 +2,5 @@ torchvision
 tqdm
 scikit-learn
 fastdownload
-openvino==2025.1
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+openvino==2025.1.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
