--- a/examples/post_training_quantization/openvino/yolov8/requirements.txt
+++ b/examples/post_training_quantization/openvino/yolov8/requirements.txt
@@ -1,4 +1,4 @@
 ultralytics==8.3.22
 onnx==1.17.0
-openvino==2025.1
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+openvino==2025.1.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
