--- a/examples/post_training_quantization/tensorflow/mobilenet_v2/requirements.txt
+++ b/examples/post_training_quantization/tensorflow/mobilenet_v2/requirements.txt
@@ -1,5 +1,5 @@
 tensorflow==2.15.1
 tensorflow-datasets
 tqdm
-openvino==2025.1
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+openvino==2025.1.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
