--- a/examples/post_training_quantization/torch_fx/resnet18/requirements.txt
+++ b/examples/post_training_quantization/torch_fx/resnet18/requirements.txt
@@ -1,5 +1,5 @@
 fastdownload==0.0.7
-openvino==2025.1
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+openvino==2025.1.0.*
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release --pre
 torch==2.6.0
 torchvision==0.21.0
