--- a/tests/post_training/requirements.txt
+++ b/tests/post_training/requirements.txt
@@ -20,5 +20,5 @@ timm==0.9.2
 accelerate==1.1.0
 transformers==4.48.3
 whowhatbench @ git+https://github.com/openvinotoolkit/openvino.genai@releases/2025/1#subdirectory=tools/who_what_benchmark
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/pre-release/ --pre
 datasets==3.1.0
