Enable mypy for nncf/quantization/*py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,10 +87,7 @@ files = [
     "nncf/common",
     "nncf/config",
     "nncf/experimental/torch2",
-    "nncf/quantization/passes.py",
-    "nncf/quantization/advanced_parameters.py",
-    "nncf/quantization/range_estimator.py",
-    "nncf/quantization/telemetry_extractors.py",
+    "nncf/quantization/*py",
     "nncf/telemetry/",
     "nncf/tensor/",
     "nncf/*py",
