Minor update pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "nncf"
 description = "Neural Networks Compression Framework"
 readme="docs/PyPiPublishing.md"
 license = { text = "Apache-2.0" }
-authors = [{ name = "Intel" }, { email = "alexander.kozlov@intel.com" }]
+authors = [{ name = "Intel" }, { email = "maksim.proshin@intel.com" }]
 requires-python = ">=3.9"
 dynamic = ["version"]
 keywords = [
