Set xfail for failed tests on macos (#3421)
### Changes

Disabled not relevant tests for macos
Removed '-n 3', some times job can fails

### Reason for changes

https://github.com/openvinotoolkit/nncf/actions/runs/14287020266

### Tests


https://github.com/openvinotoolkit/nncf/actions/runs/14379287620/job/40319001510?pr=3421

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -56,6 +56,6 @@ jobs:
       - name: Print installed modules
         run: pip list
       - name: Run pre-commit
-        run: pytest -n 3 -ra tests/openvino --dist loadscope
+        run: pytest -ra tests/openvino
         env:
           ONEDNN_MAX_CPU_ISA: AVX2
