[gha] cancel-in-progress for precommit (#3439)
### Changes

Stop running jobs on push new commits in PR

--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -3,10 +3,6 @@ permissions: read-all
 
 on:
   pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
     paths-ignore:
       - '**/*.md'
       - '.ci/*'
@@ -15,6 +11,10 @@ on:
       - 'tests/torch/sota_checkpoints_eval.json'  # reference for PT e2e
       - 'tests/tensorflow/sota_checkpoints_eval.json'  # reference for TF e2e
       - 'tests/cross_fw/examples/*'  # examples tests runs in separate workflow
+
+concurrency:
+  group: precommit-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
 
 jobs:
   pytest:
